# teletubbyos

./: .gitignore  Cargo.toml  README.md  flake.nix.bak  x86_64-teletubbyos.json
.cargo/: config.toml
boot/: limine.cfg
kernel/: Cargo.toml  linker.ld  x86_64-teletubbyos.json
kernel/scala/: Main.scala  build.sbt  help.txt  help1.txt  serial_helpers.c  stubs.c
src/: limine.rs  main.rs  pmm.rs  vga.rs
src/main/scala/: Kernel.scala
tools/: bootstrap.sh
tools/qemu/: run.sh
