[package]
name = "teletubby-kernel"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "teletubby-kernel"
test = false
bench = false

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
volatile = "0.2.6"
spin = "0.5.2"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]
